ros2_ws/log/build_2024-05-01_19-20-39/publisher_pkg/stderr.log
  File "/home/mford/ros2_ws/install/publisher_pkg/lib/python3.10/site-packages/publisher_pkg/publisher.py", line 27
    main()def main():
          ^^^
SyntaxError: invalid syntax

